Fix width Spacing

--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
 /* Header/Logo Title */
+html {
+  overflow-y: scroll;
+}
+
 body {
     margin: 0;
-    max-width: 98%;
+    max-width: 100%;
     overflow-x: hidden;
 }
 
